--- a/notebooks/explorer.ipynb
+++ b/notebooks/explorer.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "85e3459d",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0rc2"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
