Refactor consumer and producer logic; add message transformation functionality
- Updated consumer.py to improve message logging and storage logic.
- Removed unnecessary flush call in producer.py before closing the producer.
- Added consumed_messages.json to store sample order data.
- Introduced consumer_transform.py for transforming and sending messages to a new Kafka topic.
- Enhanced message handling with structured order data and total price calculation.
- Integrated environment variable loading for Kafka connection parameters.

--- a/notebooks/explorer.ipynb
+++ b/notebooks/explorer.ipynb
@@ -2,74 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0c770d09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import sys\n",
-    "# sys.path.append(\"..\")\n",
-    "# from src import producer"
+    "import sys\n",
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "cb025958",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
+    "import time\n",
+    "import numpy as np\n",
+    "import random\n",
+    "import math\n",
+    "import argparse\n",
+    "from faker import Faker\n",
     "from kafka import KafkaProducer\n",
-    "from dotenv import load_dotenv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f64de1b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "producer = KafkaProducer(\n",
-    "    bootstrap_servers='localhost:9092',\n",
-    "    retries=3,\n",
-    "    linger_ms=5,\n",
-    "    security_protocol='SASL_SSL',\n",
-    "    sasl_mechanism='SCRAM-SHA-256',\n",
-    "    sasl_plain_username=os.getenv(\"SASL_USERNAME\"),\n",
-    "    sasl_plain_password=os.getenv(\"SASL_PASSWORD\"))\n",
-    "producer.send(topic_name,key=key, value=value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a1df53bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from dotenv import load_dotenv\n",
     "from datetime import datetime\n",
-    "import math"
+    "import io"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "eb627cb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting avro-python3\n",
+      "  Downloading avro-python3-1.10.2.tar.gz (38 kB)\n",
+      "  Installing build dependencies: started\n",
+      "  Installing build dependencies: finished with status 'done'\n",
+      "  Getting requirements to build wheel: started\n",
+      "  Getting requirements to build wheel: finished with status 'done'\n",
+      "  Installing backend dependencies: started\n",
+      "  Installing backend dependencies: finished with status 'done'\n",
+      "  Preparing metadata (pyproject.toml): started\n",
+      "  Preparing metadata (pyproject.toml): finished with status 'done'\n",
+      "Building wheels for collected packages: avro-python3\n",
+      "  Building wheel for avro-python3 (pyproject.toml): started\n",
+      "  Building wheel for avro-python3 (pyproject.toml): finished with status 'done'\n",
+      "  Created wheel for avro-python3: filename=avro_python3-1.10.2-py3-none-any.whl size=44041 sha256=b2fa3606e4ab3dc5835631141c66580e008a15aaaa55531d1caf5325b4684220\n",
+      "  Stored in directory: c:\\users\\sread\\appdata\\local\\pip\\cache\\wheels\\51\\1a\\f4\\bd962fd1830f8b34c3ba124e1fabbfcb64ccd588dd3bcf1ba9\n",
+      "Successfully built avro-python3\n",
+      "Installing collected packages: avro-python3\n",
+      "Successfully installed avro-python3-1.10.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install avro-python3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "85e3459d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from avro.io import DatumWriter, BinaryEncoder\n",
+    "from avro.schema import Parse"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "85e3459d",
+   "id": "94c81302",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1747905223"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "schema = Parse(open(\"user.avsc\", \"r\").read())\n",
+    "writer = DatumWriter(schema)\n",
+    "bytes_writer = io.BytesIO()\n",
+    "encoder = BinaryEncoder(bytes_writer)\n",
+    "\n",
+    "user_data = {\"username\": \"john_doe\", \"email\": \"john@example.com\", \"age\": 30}\n",
+    "writer.write(user_data, encoder)\n",
+    "raw_bytes = bytes_writer.getvalue()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3655ddd9",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
